force-app/src/objects/TR1__Send_Out__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Account__c</fullName>
        <formula>TR1__Job__r.TR1__Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Closing_Report_Action__c</fullName>
        <formula>HYPERLINK(&apos;/a04/e?&apos;+$Label.TR1__Account_Field_Id_on_Closing_Reports+&apos;=&apos;&amp; TR1__Job__r.TR1__Account__r.Name &amp;&apos;&amp;&apos;+$Label.TR1__Account_Field_Id_on_Closing_Reports+&apos;_lkid=&apos;&amp; TR1__Job__r.TR1__Account__c&amp;&apos;&amp;&apos;+$Label.TR1__Job_Field_Id_on_Closing_Edit+&apos;=&apos;&amp; TR1__Job__r.Name&amp;&apos;&amp;&apos;+$Label.TR1__Job_Field_Id_on_Closing_Edit+&apos;_lkid=&apos;&amp; TR1__Job__c&amp;&apos;&amp;&apos;+$Label.TR1__Contact_Field_Id_on_Closing_Reports+&apos;=&apos;&amp; TR1__Interviewee__r.FirstName&amp;&apos; &apos;&amp; TR1__Interviewee__r.LastName&amp;&apos;&amp;&apos;+$Label.TR1__Contact_Field_Id_on_Closing_Reports+&apos;_lkid=&apos;&amp; TR1__Interviewee__c&amp;&apos;&amp;nooverride=1&amp;retURL=/&apos;&amp; TR1__Interviewee__c &amp;&apos;&amp;saveURL=/&apos;&amp;TR1__Interviewee__c , IMAGE(&apos;/resource/TR1__closingreport&apos;, &apos;Closing Report&apos;, 25,25), &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>C R</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Interviewee_Email__c</fullName>
        <formula>TR1__Interviewee__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interviewee Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Interviewee_Mobile__c</fullName>
        <formula>TR1__Interviewee__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interviewee Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Interviewee_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interviewee Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Send_Outs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Interviewee_Phone__c</fullName>
        <formula>TR1__Interviewee__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interviewee Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Interviewee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interviewee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Send Outs</relationshipLabel>
        <relationshipName>Send_Out1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Contact_Email__c</fullName>
        <formula>TR1__Job__r.TR1__Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Contact_Phone__c</fullName>
        <formula>TR1__Job__r.TR1__Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Contact__c</fullName>
        <formula>TR1__Job__r.TR1__Contact__r.FirstName &amp; &quot; &quot; &amp;  TR1__Job__r.TR1__Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Reporting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Reporting</label>
        <referenceTo>TR1__Job_Reporting__c</referenceTo>
        <relationshipLabel>Send Outs</relationshipLabel>
        <relationshipName>Send_Outs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Job__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Job</label>
        <referenceTo>TR1__Job__c</referenceTo>
        <relationshipLabel>Send Outs</relationshipLabel>
        <relationshipName>Send_Outs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Number_Of_Schedules__c</fullName>
        <inlineHelpText>This Number excludes Cancelled Send Outs</inlineHelpText>
        <label>Number Of Schedules</label>
        <summaryFilterItems>
            <field>TR1__Send_Out_Schedule__c.TR1__Cancel_Meeting__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>TR1__Send_Out_Schedule__c.TR1__Send_Out__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TR1__Number_of_Days_in_Stage__c</fullName>
        <formula>IF(IF( ISNULL(TR1__Stage_End_Date__c) , TODAY(), TR1__Stage_End_Date__c) - TR1__Stage_Start_Date__c = 0, 1, IF( ISNULL(TR1__Stage_End_Date__c) , TODAY(), TR1__Stage_End_Date__c) - TR1__Stage_Start_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Days in Stage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Offer_Action__c</fullName>
        <formula>HYPERLINK(&apos;/a0V/e?&apos;+$Label.TR1__Contact_Field_In_on_Offer+&apos;=&apos;&amp; TR1__Interviewee__r.FirstName&amp;&apos; &apos;&amp; TR1__Interviewee__r.LastName&amp;&apos;&amp;&apos;+$Label.TR1__Contact_Field_In_on_Offer+&apos;_lkid=&apos;&amp; TR1__Interviewee__c&amp;&apos;&amp;&apos;+$Label.TR1__Job_Field_Id_on_Offer+&apos;=&apos;&amp; TR1__Job__r.Name &amp;&apos;&amp;&apos;+$Label.TR1__Job_Field_Id_on_Offer+&apos;_lkid=&apos;&amp; TR1__Job__c &amp;&apos;&amp;nooverride=1&amp;retURL=/&apos;&amp; TR1__Interviewee__c &amp;&apos;&amp;saveURL=/apex/UpdateStatus?sendoutIdToUpdate=&apos;&amp;Id&amp;&apos;-fromSendout-&apos;&amp; TR1__Interviewee__c&amp;&apos;&amp;&apos;+$Label.TR1__Status_Field_Id_On_Offer+&apos;=Current&apos;, IMAGE(&apos;/resource/TR1__offer&apos;, &apos;Offer&apos;, 25,25),&apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ofr</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Reject_Action__c</fullName>
        <formula>HYPERLINK(&apos;/apex/TR1__JobManagerSendOutReject?Id=&apos;&amp;Id&amp;&apos;&amp;retURL=/&apos;&amp;TR1__Interviewee__c&amp;&apos;&amp;saveURL=/&apos;&amp;TR1__Interviewee__c, IMAGE(&apos;/resource/TR1__Reject&apos;, &apos;Reject&apos;, 25,25),&apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rjt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Rejection_Notes__c</fullName>
        <label>Rejection Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Rejection_Notification__c</fullName>
        <label>Rejection Notification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Automated Rejection Email</fullName>
                </value>
                <value>
                    <fullName>Job Owner Will Notify</fullName>
                </value>
                <value>
                    <fullName>Contact Owner Will Notify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Revert_Action__c</fullName>
        <formula>HYPERLINK(&apos;/apex/TR1__JobManagerSendOutMoveBack?Id=&apos;&amp; Id &amp;&apos;&amp;retURL=/&apos;&amp;TR1__Interviewee__c&amp;&apos;&amp;saveURL=/&apos;&amp;TR1__Interviewee__c, IMAGE(&apos;/resource/TR1__MoveBack&apos;, &apos;Revert&apos;, 25,25),&apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rvt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Schedule_Sendouts_Action__c</fullName>
        <formula>HYPERLINK(&apos;/apex/TR1__JobManagerSendout?Id=&apos;&amp; Id &amp;&apos;&amp;retURL=/&apos;&amp; TR1__Interviewee__c &amp;&apos;&amp;saveURL=/&apos;&amp;TR1__Interviewee__c, IMAGE(&apos;/resource/TR1__sendout&apos;, &apos;Schedule Sendouts&apos;, 25,25),&apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>S S</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Stage_End_Date__c</fullName>
        <label>Stage End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Stage_Start_Date__c</fullName>
        <label>Stage Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>First</fullName>
                </value>
                <value>
                    <fullName>Fourth</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Second</fullName>
                </value>
                <value>
                    <fullName>Third</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Stage_for_KCRA__c</fullName>
        <formula>TEXT(TR1__Job_Reporting__r.TR1__Stage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Status__c</fullName>
        <label>Job Manager Stage Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                    <default>true</default>
                    <label>Current</label>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Send Out</label>
    <listViews>
        <fullName>TR1__All</fullName>
        <columns>TR1__Interviewee__c</columns>
        <columns>TR1__Job__c</columns>
        <columns>TR1__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SO-{MM}{DD}{YYYY}-{0}</displayFormat>
        <label>Send Out Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Send Outs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>